@startuml
!theme plain

entity productos {
  *id : bigserial NOT NULL,
  --
  descripcion : text COLLATE pg
  peso : double precision NOT NULL DEFAULT
  codigo_barras : character varying(255) COLLATE pg
  codigo_qr : character varying(255) COLLATE pg
  stock_minimo : integer NOT NULL DEFAULT 0,
  activo : boolean NOT NULL DEFAULT true,
  es_alquilable : boolean NOT NULL DEFAULT false,
  marca_id : bigint,
  controlar_stock : boolean NOT NULL DEFAULT true,
  proveedor_id : bigint,
}

entity categorias {
  *id : bigserial NOT NULL,
  --
  descripcion : text COLLATE pg
  activo : boolean NOT NULL DEFAULT true,
}

entity marcas {
  *id : bigserial NOT NULL,
  --
  descripcion : text COLLATE pg
  activo : boolean NOT NULL DEFAULT true,
}

entity unidades_medida {
  *id : bigserial NOT NULL,
  --
  nombre : character varying(255) COLLATE pg
  activo : boolean NOT NULL DEFAULT true,
  updated_at : timestamp(0) without time zone,
}

entity stock_productos {
  *id : bigserial NOT NULL,
  --
  almacen_id : bigint NOT NULL,
  fecha_actualizacion : timestamp(0) without time zone NOT NULL DEFAULT CURRENT
  lote : character varying(255) COLLATE pg
  fecha_vencimiento : date,
  cantidad_disponible : integer NOT NULL DEFAULT 0,
}

entity movimientos_inventario {
  *id : bigserial NOT NULL,
  --
  cantidad_anterior : integer,
  cantidad_posterior : integer,
  observacion : character varying(255) COLLATE pg
  numero_documento : character varying(255) COLLATE pg
  tipo : character varying(255) COLLATE pg
  user_id : bigint NOT NULL,
  tipo_merma_id : bigint,
  anulado : boolean NOT NULL DEFAULT false,
  user_anulacion_id : bigint,
  referencia_tipo : character varying(255) COLLATE pg
  referencia_id : bigint,
  deleted_at : timestamp(0) without time zone,
  updated_at : timestamp(0) without time zone,
}

entity tipo_mermas {
  *id : bigserial NOT NULL,
  --
  label : character varying(255) COLLATE pg
  descripcion : character varying(255) COLLATE pg
  color : character varying(255) COLLATE pg
  bg_color : character varying(255) COLLATE pg
  text_color : character varying(255) COLLATE pg
  requiere_aprobacion : boolean NOT NULL DEFAULT true,
  created_at : timestamp(0) without time zone,
}

entity tipos_ajuste_inventario {
  *id : bigserial NOT NULL,
  --
  label : character varying(255) COLLATE pg
  descripcion : character varying(255) COLLATE pg
  color : character varying(255) COLLATE pg
  bg_color : character varying(255) COLLATE pg
  text_color : character varying(255) COLLATE pg
  activo : boolean NOT NULL DEFAULT true,
  updated_at : timestamp(0) without time zone,
}

entity estado_mermas {
  *id : bigserial NOT NULL,
  --
  label : character varying(255) COLLATE pg
  color : character varying(255) COLLATE pg
  bg_color : character varying(255) COLLATE pg
  text_color : character varying(255) COLLATE pg
  actions : json,
  created_at : timestamp(0) without time zone,
}

entity transferencia_inventarios {
  *id : bigserial NOT NULL,
  --
  fecha : timestamp(0) without time zone NOT NULL,
  almacen_destino_id : bigint NOT NULL,
  estado : character varying(255) COLLATE pg
  observaciones : text COLLATE pg
  fecha_envio : timestamp(0) without time zone,
  vehiculo_id : bigint,
  total_productos : integer NOT NULL DEFAULT 0,
  created_at : timestamp(0) without time zone,
}

entity detalle_transferencia_inventarios {
  *id : bigserial NOT NULL,
  --
  producto_id : bigint NOT NULL,
  lote : character varying(255) COLLATE pg
  fecha_vencimiento : date,
  observaciones : text COLLATE pg
  created_at : timestamp(0) without time zone,
}

entity configuracion_ganancias {
  *id : bigserial NOT NULL,
  --
  tipo_precio_id : bigint NOT NULL,
  margen_minimo : numeric(8, 2) NOT NULL DEFAULT
  margen_maximo : numeric(8, 2),
  NOT : NULL DEFAULT
  precio_base_referencia : numeric(10, 2),
  activo : boolean NOT NULL DEFAULT true,
  updated_at : timestamp(0) without time zone,
}

entity precios_producto {
  *id : bigserial NOT NULL,
  --
  tipo_precio_id : bigint NOT NULL,
  precio : numeric(18, 2) NOT NULL,
  porcentaje_ganancia : numeric(5, 2),
  fecha_inicio : date,
  activo : boolean NOT NULL DEFAULT true,
  tipo_cliente : character varying(255) COLLATE pg
  created_at : timestamp(0) without time zone,
}

entity historial_precios {
  *id : bigserial NOT NULL,
  --
  valor_anterior : numeric(10, 2) NOT NULL,
  NOT : NULL,
  motivo : character varying(500) COLLATE pg
  usuario : character varying(100) COLLATE pg
  tipo_precio : character varying(20) COLLATE pg
  porcentaje_cambio : numeric(5, 2),
  updated_at : timestamp(0) without time zone,
}

entity imagenes_producto {
  *id : bigserial NOT NULL,
  --
  url : character varying(255) COLLATE pg
  es_principal : boolean NOT NULL DEFAULT false,
  created_at : timestamp(0) without time zone,
}

entity codigos_barra {
  *id : bigserial NOT NULL,
  --
  codigo : character varying(255) COLLATE pg
  tipo : character varying(255) COLLATE pg
  es_principal : boolean NOT NULL DEFAULT false,
  created_at : timestamp(0) without time zone,
}

codigos_barra }o--|| productos : producto_id -> id
configuracion_ganancias }o--|| productos : producto_id -> id
detalle_transferencia_inventarios }o--|| productos : producto_id -> id
detalle_transferencia_inventarios }o--|| transferencia_inventarios : transferencia_id -> id
historial_precios }o--|| precios_producto : precio_producto_id -> id
imagenes_producto }o--|| productos : producto_id -> id
movimientos_inventario }o--|| estado_mermas : estado_merma_id -> id
movimientos_inventario }o--|| stock_productos : stock_producto_id -> id
movimientos_inventario }o--|| tipos_ajuste_inventario : tipo_ajuste_inventario_id -> id
movimientos_inventario }o--|| tipo_mermas : tipo_merma_id -> id
precios_producto }o--|| productos : producto_id -> id
productos }o--|| categorias : categoria_id -> id
productos }o--|| marcas : marca_id -> id
productos }o--|| unidades_medida : unidad_medida_id -> id
stock_productos }o--|| productos : producto_id -> id
@enduml